--- a/app/styles/components/_details.scss
+++ b/app/styles/components/_details.scss
@@ -10,6 +10,11 @@
     text-align: center;
   }
 
+  .status {
+    display: block;
+    font-size: 12px;
+  }
+
   .result {
     background: rgb(94, 84, 180);
     height: 100%;
